搭建基础视图框架，创建世界完成

--- a/client/project/release.html
+++ b/client/project/release.html
@@ -11,5 +11,10 @@
 		</style>
 	</head>
 	<body>
+		<div style="text-align:center;">
+			<canvas id="linkScreen">
+				很遗憾，您的浏览器不支持HTML5，请使用支持HTML5的浏览器。
+			</canvas>
+		</div>
 	</body>
 </html>
