战斗操作demo完成

--- a/client/project/index.html
+++ b/client/project/index.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+		<meta id="viewport" name="viewport" content="width=320,user-scalable=no" />
 		<script data-main="js/main" src="require.js"></script>
 		<title>ourwuxia</title>
 		<style type="text/css">
